crates/pgls_pretty_print/tests/snapshots/single/tests__distinct_expr_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/distinct_expr_0_100.sql
snapshot_kind: text
---
SELECT * FROM t WHERE a IS DISTINCT FROM b;
