crates/pgls_pretty_print/tests/snapshots/single/tests__do_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/do_stmt_0_100.sql
snapshot_kind: text
---
DO LANGUAGE plpgsql $$BEGIN NULL; END$$;
