crates/pgls_pretty_print/tests/snapshots/single/tests__do_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/do_stmt_0.sql
---
do
language plpgsql
$do$
BEGIN NULL; END
$do$;
