crates/pgls_pretty_print/tests/snapshots/single/tests__dollar_quoted_function_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/dollar_quoted_function_0.sql
snapshot_kind: text
---
create function test_func()
returns void
language plpgsql
as $function$
BEGIN
    RAISE NOTICE 'Hello, world!';
END;
$function$;
