crates/pgls_pretty_print/tests/snapshots/single/tests__drop_owned_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/drop_owned_stmt_0_100.sql
snapshot_kind: text
---
DROP OWNED BY myuser;
