crates/pgls_pretty_print/tests/snapshots/single/tests__drop_role_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/drop_role_stmt_0_100.sql
snapshot_kind: text
---
DROP ROLE test_user;
